// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditSettingsView renders and matches the snapshot 1`] = `
.c13 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c18 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c19 {
  font-size: 1rem;
  line-height: 1.5;
  color: #666687;
}

.c23 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c32 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c36 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c40 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c55 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  color: #32324d;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c16 {
  padding-right: 8px;
}

.c20 {
  padding-right: 56px;
  padding-left: 56px;
}

.c21 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c31 {
  padding-right: 16px;
  padding-left: 16px;
}

.c33 {
  padding-left: 12px;
}

.c37 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c38 {
  background: #eaeaef;
}

.c44 {
  padding: 16px;
  border-radius: 4px;
  border-style: dashed;
  border-width: 1px;
  border-color: #c0c0cf;
}

.c48 {
  background: #f6f6f9;
  border-radius: 4px;
  border-color: #eaeaef;
  border: 1px solid #eaeaef;
  width: 100%;
  min-height: 2rem;
}

.c51 {
  padding-right: 12px;
  padding-left: 12px;
}

.c54 {
  overflow: hidden;
  width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c22 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c26 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c45 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c49 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c27 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c27 > * + * {
  margin-top: 4px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c58 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c17 {
  height: 100%;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c15 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 .c12 {
  color: #ffffff;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c12 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c12 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c15:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c60 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c60 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c60 .c12 {
  color: #ffffff;
}

.c60[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c60[aria-disabled='true'] .c12 {
  color: #666687;
}

.c60[aria-disabled='true'] svg > g,.c60[aria-disabled='true'] svg path {
  fill: #666687;
}

.c60[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c60[aria-disabled='true']:active .c12 {
  color: #666687;
}

.c60[aria-disabled='true']:active svg > g,.c60[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c60:hover {
  background-color: #ffffff;
}

.c60:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c60:active .c12 {
  color: #4945ff;
}

.c60:active svg > g,
.c60:active svg path {
  fill: #4945ff;
}

.c60 .c12 {
  color: #271fe0;
}

.c60 svg > g,
.c60 svg path {
  fill: #271fe0;
}

.c28 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c28:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c34 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c34 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c34 svg path {
  fill: #666687;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c35 svg {
  width: 0.375rem;
}

.c29 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c29:focus {
  outline: none;
}

.c29[aria-disabled='true'] {
  cursor: not-allowed;
}

.c30 {
  width: 100%;
}

.c39 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c24 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c25 {
  grid-column: span 6;
  max-width: 100%;
}

.c46 {
  grid-column: span 6;
  max-width: 100%;
}

.c56 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
  border: none;
}

.c56 svg > g,
.c56 svg path {
  fill: #8e8ea9;
}

.c56:hover svg > g,
.c56:hover svg path {
  fill: #666687;
}

.c56:active svg > g,
.c56:active svg path {
  fill: #a5a5ba;
}

.c56[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c56[aria-disabled='true'] svg path {
  fill: #666687;
}

.c0:focus-visible {
  outline: none;
}

.c6 {
  padding-right: 8px;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c43 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c41 svg {
  height: 12px;
  width: 12px;
}

.c41 svg > g,
.c41 svg path {
  fill: #ffffff;
}

.c41[aria-disabled='true'] {
  pointer-events: none;
}

.c41:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c41:focus-visible {
  outline: none;
}

.c41:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c42 {
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
  border-radius: 4px;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c42 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c42 .c8 {
  color: #ffffff;
}

.c42[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c42[aria-disabled='true'] .c8 {
  color: #666687;
}

.c42[aria-disabled='true'] svg > g,.c42[aria-disabled='true'] svg path {
  fill: #666687;
}

.c42[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c42[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c42[aria-disabled='true']:active svg > g,.c42[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c42:hover {
  background-color: #ffffff;
}

.c42:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c42:active .c8 {
  color: #4945ff;
}

.c42:active svg > g,
.c42:active svg path {
  fill: #4945ff;
}

.c42 .c8 {
  color: #271fe0;
}

.c42 svg > g,
.c42 svg path {
  fill: #271fe0;
}

.c57 {
  background-color: transparent;
}

.c57 path {
  fill: #666687;
}

.c47 {
  position: relative;
  padding-right: 4px;
}

.c59 {
  position: relative;
  padding-left: 4px;
}

.c53 {
  height: 0.75rem;
  width: 0.75rem;
}

.c53 path {
  fill: #666687;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.c52 {
  cursor: all-scroll;
  border-right: 1px solid #dcdce4;
}

@media (max-width:68.75rem) {
  .c25 {
    grid-column: span 12;
  }
}

@media (max-width:34.375rem) {
  .c25 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c46 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c46 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form>
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/"
            >
              <span
                aria-hidden="true"
                class="c5 c6 c7"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c8 c9"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c10"
          >
            <div
              class="c1 c11"
            >
              <h1
                class="c12 c13"
              >
                Configure the view - Address
              </h1>
            </div>
            <button
              aria-disabled="true"
              class="c14 c15"
              disabled=""
              type="submit"
            >
              <div
                aria-hidden="true"
                class="c1 c16 c17"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <span
                class="c12 c18"
              >
                Save
              </span>
            </button>
          </div>
          <p
            class="c12 c19"
          >
            Customize how the edit view will look like.
          </p>
        </div>
      </div>
      <div
        class="c1 c20"
      >
        <div
          class="c1 c21"
        >
          <div
            class="c1 c22"
          >
            <h2
              class="c12 c23"
            >
              Settings
            </h2>
            <div
              class="c1 c24"
            >
              <div
                class="c25"
              >
                <div
                  class="c1 "
                >
                  <div>
                    <div
                      class="c1 c26 c27"
                    >
                      <label
                        class="c12 c18"
                        for="1"
                      >
                        <div
                          class="c1 c11"
                        >
                          Entry title
                        </div>
                      </label>
                      <div
                        class="c1 c11 c28"
                      >
                        <button
                          aria-describedby="1-hint"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="1 1-label 1-content"
                          class="c29"
                          id="1"
                          type="button"
                        />
                        <div
                          class="c1 c10 c30"
                        >
                          <div
                            class="c1 c11"
                          >
                            <div
                              class="c1 c31"
                            >
                              <span
                                class="c12 c32"
                                id="1-content"
                              >
                                postal_code
                              </span>
                            </div>
                          </div>
                          <div
                            class="c1 c11"
                          >
                            <button
                              aria-hidden="true"
                              class="c1 c33 c34 c35"
                              tabindex="-1"
                              title="Carret Down Button"
                              type="button"
                            >
                              <svg
                                fill="none"
                                height="1em"
                                viewBox="0 0 14 8"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                      <p
                        class="c12 c36"
                        id="1-hint"
                      >
                        Set the display field of your entry
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c1 c37"
            >
              <hr
                class="c1 c38 c39"
              />
            </div>
            <h3
              class="c12 c23"
            >
              View
            </h3>
            <div
              class="c1 c22"
            >
              <div
                class="c1 c10"
              >
                <div>
                  <div
                    class="c1 "
                  >
                    <span
                      class="c12 c40"
                    >
                      Displayed fields
                    </span>
                  </div>
                  <div
                    class="c1 "
                  >
                    <span
                      class="c12 c36"
                    >
                      Drag & drop the fields to build the layout
                    </span>
                  </div>
                </div>
                <div>
                  <a
                    aria-disabled="false"
                    class="c41 c42"
                    href="/plugins/content-type-builder/content-types/api::address.address"
                    variant="secondary"
                  >
                    <div
                      aria-hidden="true"
                      class="c5 c6"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 011.887 0l3.118 3.118zM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0z"
                          fill="#212134"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <span
                      class="c8 c43"
                    >
                      Edit the content type
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="c1 c44"
              >
                <div
                  class="c1 c45"
                >
                  <div
                    class="c1 c24"
                  >
                    <div
                      class="c46"
                    >
                      <div
                        class="c1 "
                      >
                        <div
                          class="c1 c11 c47"
                        >
                          <div
                            class="c1 c48 c49 c50"
                          >
                            <span
                              class="c1 c51 c11 c52"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c53"
                                fill="none"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 01-2.184-.574A1.943 1.943 0 0114.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 011.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0017.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006zM16.563 14.372a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 01-2.184-.574 1.943 1.943 0 01-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 00-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005zM16.563 23.392a2.503 2.503 0 100-5.006 2.503 2.503 0 000 5.006z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 01-2.184-.574 1.943 1.943 0 01-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 00-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006zM7.378 5.622a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 011.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 008.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005zM7.378 14.406a2.503 2.503 0 100-5.006 2.503 2.503 0 000 5.006z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 011.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 008.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006zM7.378 23.427a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 008.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c1 c54"
                              overflow="hidden"
                            >
                              <div
                                class="c1 c33 c10"
                              >
                                <span
                                  class="c12 c55"
                                >
                                  postal_code
                                </span>
                                <div
                                  class="c1 c11"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="2"
                                      class="c14 c56 c57"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c58"
                                      >
                                        Edit postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 24 24"
                                        width="1em"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 011.887 0l3.118 3.118zM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="3"
                                      class="c14 c56 c57"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c58"
                                      >
                                        Delete postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 24 24"
                                        width="1em"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 00-.197.233L6 24h12l2.96-17.618a.2.2 0 00-.196-.233H3.236zM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 01-.2.2H2.2a.2.2 0 01-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c46"
                    >
                      <div
                        class="c1 "
                      >
                        <div
                          class="c1 c11 c59"
                        >
                          <div
                            class="c1 c48 c49 c50"
                          >
                            <span
                              class="c1 c51 c11 c52"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c53"
                                fill="none"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 01-2.184-.574A1.943 1.943 0 0114.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 011.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0017.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006zM16.563 14.372a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 01-2.184-.574 1.943 1.943 0 01-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 00-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005zM16.563 23.392a2.503 2.503 0 100-5.006 2.503 2.503 0 000 5.006z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 01-2.184-.574 1.943 1.943 0 01-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 00-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006zM7.378 5.622a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 011.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 008.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005zM7.378 14.406a2.503 2.503 0 100-5.006 2.503 2.503 0 000 5.006z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 011.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 008.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006zM7.378 23.427a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 008.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c1 c54"
                              overflow="hidden"
                            >
                              <div
                                class="c1 c33 c10"
                              >
                                <span
                                  class="c12 c55"
                                >
                                  city
                                </span>
                                <div
                                  class="c1 c11"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="4"
                                      class="c14 c56 c57"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c58"
                                      >
                                        Edit city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 24 24"
                                        width="1em"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 011.887 0l3.118 3.118zM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="5"
                                      class="c14 c56 c57"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c58"
                                      >
                                        Delete city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 24 24"
                                        width="1em"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 00-.197.233L6 24h12l2.96-17.618a.2.2 0 00-.196-.233H3.236zM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 01-.2.2H2.2a.2.2 0 01-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <button
                      aria-controls="label"
                      aria-disabled="true"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="c14 c60"
                      data-testid="add-field"
                      disabled=""
                      label="Insert another field"
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        class="c1 c16 c17"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 13.604a.3.3 0 01-.3.3h-9.795V23.7a.3.3 0 01-.3.3h-3.21a.3.3 0 01-.3-.3v-9.795H.3a.3.3 0 01-.3-.3v-3.21a.3.3 0 01.3-.3h9.795V.3a.3.3 0 01.3-.3h3.21a.3.3 0 01.3.3v9.795H23.7a.3.3 0 01.3.3v3.21z"
                            fill="#212134"
                          />
                        </svg>
                      </div>
                      <span
                        class="c12 c18"
                      >
                        Insert another field
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c58"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`EditSettingsView should add field 1`] = `
.c13 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c18 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c19 {
  font-size: 1rem;
  line-height: 1.5;
  color: #666687;
}

.c23 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c32 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #32324d;
}

.c36 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c40 {
  font-size: 0.875rem;
  line-height: 1.43;
  font-weight: 600;
  color: #32324d;
}

.c55 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 500;
  color: #32324d;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c16 {
  padding-right: 8px;
}

.c20 {
  padding-right: 56px;
  padding-left: 56px;
}

.c21 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c31 {
  padding-right: 16px;
  padding-left: 16px;
}

.c33 {
  padding-left: 12px;
}

.c37 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c38 {
  background: #eaeaef;
}

.c44 {
  padding: 16px;
  border-radius: 4px;
  border-style: dashed;
  border-width: 1px;
  border-color: #c0c0cf;
}

.c48 {
  background: #f6f6f9;
  border-radius: 4px;
  border-color: #eaeaef;
  border: 1px solid #eaeaef;
  width: 100%;
  min-height: 2rem;
}

.c51 {
  padding-right: 12px;
  padding-left: 12px;
}

.c54 {
  overflow: hidden;
  width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c22 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 16px;
}

.c26 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c45 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 8px;
}

.c49 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c27 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c27 > * + * {
  margin-top: 4px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c14 svg {
  height: 12px;
  width: 12px;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c14[aria-disabled='true'] {
  pointer-events: none;
}

.c14:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c14:focus-visible {
  outline: none;
}

.c14:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c58 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c17 {
  height: 100%;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c15 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 .c12 {
  color: #ffffff;
}

.c15[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true'] .c12 {
  color: #666687;
}

.c15[aria-disabled='true'] svg > g,.c15[aria-disabled='true'] svg path {
  fill: #666687;
}

.c15[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c15[aria-disabled='true']:active .c12 {
  color: #666687;
}

.c15[aria-disabled='true']:active svg > g,.c15[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c15:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c15:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c60 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c60 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c60 .c12 {
  color: #ffffff;
}

.c60[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c60[aria-disabled='true'] .c12 {
  color: #666687;
}

.c60[aria-disabled='true'] svg > g,.c60[aria-disabled='true'] svg path {
  fill: #666687;
}

.c60[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c60[aria-disabled='true']:active .c12 {
  color: #666687;
}

.c60[aria-disabled='true']:active svg > g,.c60[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c60:hover {
  background-color: #ffffff;
}

.c60:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c60:active .c12 {
  color: #4945ff;
}

.c60:active svg > g,
.c60:active svg path {
  fill: #4945ff;
}

.c60 .c12 {
  color: #271fe0;
}

.c60 svg > g,
.c60 svg path {
  fill: #271fe0;
}

.c28 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c28:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c34 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c34 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c34 svg path {
  fill: #666687;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c35 svg {
  width: 0.375rem;
}

.c29 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c29:focus {
  outline: none;
}

.c29[aria-disabled='true'] {
  cursor: not-allowed;
}

.c30 {
  width: 100%;
}

.c39 {
  height: 1px;
  border: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin: 0;
}

.c24 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
}

.c25 {
  grid-column: span 6;
  max-width: 100%;
}

.c46 {
  grid-column: span 6;
  max-width: 100%;
}

.c56 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
  border: none;
}

.c56 svg > g,
.c56 svg path {
  fill: #8e8ea9;
}

.c56:hover svg > g,
.c56:hover svg path {
  fill: #666687;
}

.c56:active svg > g,
.c56:active svg path {
  fill: #a5a5ba;
}

.c56[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c56[aria-disabled='true'] svg path {
  fill: #666687;
}

.c0:focus-visible {
  outline: none;
}

.c6 {
  padding-right: 8px;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c43 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c41 svg {
  height: 12px;
  width: 12px;
}

.c41 svg > g,
.c41 svg path {
  fill: #ffffff;
}

.c41[aria-disabled='true'] {
  pointer-events: none;
}

.c41:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c41:focus-visible {
  outline: none;
}

.c41:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c42 {
  padding: 8px 16px;
  background: #4945ff;
  border: 1px solid #4945ff;
  border-radius: 4px;
  border: 1px solid #d9d8ff;
  background: #f0f0ff;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c42 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c42 .c8 {
  color: #ffffff;
}

.c42[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c42[aria-disabled='true'] .c8 {
  color: #666687;
}

.c42[aria-disabled='true'] svg > g,.c42[aria-disabled='true'] svg path {
  fill: #666687;
}

.c42[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c42[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c42[aria-disabled='true']:active svg > g,.c42[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c42:hover {
  background-color: #ffffff;
}

.c42:active {
  background-color: #ffffff;
  border: 1px solid #4945ff;
}

.c42:active .c8 {
  color: #4945ff;
}

.c42:active svg > g,
.c42:active svg path {
  fill: #4945ff;
}

.c42 .c8 {
  color: #271fe0;
}

.c42 svg > g,
.c42 svg path {
  fill: #271fe0;
}

.c57 {
  background-color: transparent;
}

.c57 path {
  fill: #666687;
}

.c47 {
  position: relative;
  padding-right: 4px;
}

.c59 {
  position: relative;
  padding-left: 4px;
}

.c53 {
  height: 0.75rem;
  width: 0.75rem;
}

.c53 path {
  fill: #666687;
}

.c50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  opacity: 1;
}

.c52 {
  cursor: all-scroll;
  border-right: 1px solid #dcdce4;
}

@media (max-width:68.75rem) {
  .c25 {
    grid-column: span 12;
  }
}

@media (max-width:34.375rem) {
  .c25 {
    grid-column: span;
  }
}

@media (max-width:68.75rem) {
  .c46 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c46 {
    grid-column: span;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form>
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/"
            >
              <span
                aria-hidden="true"
                class="c5 c6 c7"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c8 c9"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c10"
          >
            <div
              class="c1 c11"
            >
              <h1
                class="c12 c13"
              >
                Configure the view - Address
              </h1>
            </div>
            <button
              aria-disabled="true"
              class="c14 c15"
              disabled=""
              type="submit"
            >
              <div
                aria-hidden="true"
                class="c1 c16 c17"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                    fill="#212134"
                  />
                </svg>
              </div>
              <span
                class="c12 c18"
              >
                Save
              </span>
            </button>
          </div>
          <p
            class="c12 c19"
          >
            Customize how the edit view will look like.
          </p>
        </div>
      </div>
      <div
        class="c1 c20"
      >
        <div
          class="c1 c21"
        >
          <div
            class="c1 c22"
          >
            <h2
              class="c12 c23"
            >
              Settings
            </h2>
            <div
              class="c1 c24"
            >
              <div
                class="c25"
              >
                <div
                  class="c1 "
                >
                  <div>
                    <div
                      class="c1 c26 c27"
                    >
                      <label
                        class="c12 c18"
                        for="12"
                      >
                        <div
                          class="c1 c11"
                        >
                          Entry title
                        </div>
                      </label>
                      <div
                        class="c1 c11 c28"
                      >
                        <button
                          aria-describedby="12-hint"
                          aria-disabled="false"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-labelledby="12 12-label 12-content"
                          class="c29"
                          id="12"
                          type="button"
                        />
                        <div
                          class="c1 c10 c30"
                        >
                          <div
                            class="c1 c11"
                          >
                            <div
                              class="c1 c31"
                            >
                              <span
                                class="c12 c32"
                                id="12-content"
                              >
                                postal_code
                              </span>
                            </div>
                          </div>
                          <div
                            class="c1 c11"
                          >
                            <button
                              aria-hidden="true"
                              class="c1 c33 c34 c35"
                              tabindex="-1"
                              title="Carret Down Button"
                              type="button"
                            >
                              <svg
                                fill="none"
                                height="1em"
                                viewBox="0 0 14 8"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  clip-rule="evenodd"
                                  d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                  fill="#32324D"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </button>
                          </div>
                        </div>
                      </div>
                      <p
                        class="c12 c36"
                        id="12-hint"
                      >
                        Set the display field of your entry
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c1 c37"
            >
              <hr
                class="c1 c38 c39"
              />
            </div>
            <h3
              class="c12 c23"
            >
              View
            </h3>
            <div
              class="c1 c22"
            >
              <div
                class="c1 c10"
              >
                <div>
                  <div
                    class="c1 "
                  >
                    <span
                      class="c12 c40"
                    >
                      Displayed fields
                    </span>
                  </div>
                  <div
                    class="c1 "
                  >
                    <span
                      class="c12 c36"
                    >
                      Drag & drop the fields to build the layout
                    </span>
                  </div>
                </div>
                <div>
                  <a
                    aria-disabled="false"
                    class="c41 c42"
                    href="/plugins/content-type-builder/content-types/api::address.address"
                    variant="secondary"
                  >
                    <div
                      aria-hidden="true"
                      class="c5 c6"
                    >
                      <svg
                        fill="none"
                        height="1em"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 011.887 0l3.118 3.118zM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0z"
                          fill="#212134"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <span
                      class="c8 c43"
                    >
                      Edit the content type
                    </span>
                  </a>
                </div>
              </div>
              <div
                class="c1 c44"
              >
                <div
                  class="c1 c45"
                >
                  <div
                    class="c1 c24"
                  >
                    <div
                      class="c46"
                    >
                      <div
                        class="c1 "
                      >
                        <div
                          class="c1 c11 c47"
                        >
                          <div
                            class="c1 c48 c49 c50"
                          >
                            <span
                              class="c1 c51 c11 c52"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c53"
                                fill="none"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 01-2.184-.574A1.943 1.943 0 0114.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 011.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0017.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006zM16.563 14.372a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 01-2.184-.574 1.943 1.943 0 01-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 00-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005zM16.563 23.392a2.503 2.503 0 100-5.006 2.503 2.503 0 000 5.006z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 01-2.184-.574 1.943 1.943 0 01-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 00-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006zM7.378 5.622a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 011.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 008.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005zM7.378 14.406a2.503 2.503 0 100-5.006 2.503 2.503 0 000 5.006z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 011.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 008.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006zM7.378 23.427a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 008.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c1 c54"
                              overflow="hidden"
                            >
                              <div
                                class="c1 c33 c10"
                              >
                                <span
                                  class="c12 c55"
                                >
                                  postal_code
                                </span>
                                <div
                                  class="c1 c11"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="13"
                                      class="c14 c56 c57"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c58"
                                      >
                                        Edit postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 24 24"
                                        width="1em"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 011.887 0l3.118 3.118zM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="14"
                                      class="c14 c56 c57"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c58"
                                      >
                                        Delete postal_code
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 24 24"
                                        width="1em"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 00-.197.233L6 24h12l2.96-17.618a.2.2 0 00-.196-.233H3.236zM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 01-.2.2H2.2a.2.2 0 01-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="c46"
                    >
                      <div
                        class="c1 "
                      >
                        <div
                          class="c1 c11 c59"
                        >
                          <div
                            class="c1 c48 c49 c50"
                          >
                            <span
                              class="c1 c51 c11 c52"
                              draggable="true"
                              tabindex="-1"
                              type="button"
                            >
                              <svg
                                class="c53"
                                fill="none"
                                height="1em"
                                viewBox="0 0 24 24"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16.563 5.587a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 3.083c-.012.788-.487 1.513-1.229 1.797a1.954 1.954 0 01-2.184-.574A1.943 1.943 0 0114.9 2.11c.4-.684 1.2-1.066 1.981-.927a1.954 1.954 0 011.606 1.9c.011.748 1.17.748 1.158 0A3.138 3.138 0 0017.565.17c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006zM16.563 14.372a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 11.867c-.012.789-.487 1.513-1.229 1.797a1.954 1.954 0 01-2.184-.574 1.943 1.943 0 01-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.968 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 00-2.08-2.914c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.675 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.005zM16.563 23.392a2.503 2.503 0 100-5.006 2.503 2.503 0 000 5.006z"
                                  fill="#212134"
                                />
                                <path
                                  d="M18.487 20.89c-.012.787-.487 1.512-1.229 1.796a1.954 1.954 0 01-2.184-.574 1.943 1.943 0 01-.174-2.196c.4-.684 1.2-1.066 1.981-.927.928.156 1.588.967 1.606 1.9.011.748 1.17.748 1.158 0a3.138 3.138 0 00-2.08-2.914c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.284 3.575.678 1.124 1.993 1.674 3.273 1.431 1.432-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.158-.006zM7.378 5.622a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 3.119c-.011.788-.486 1.512-1.228 1.796a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 011.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 008.38.205c-1.176-.423-2.567-.029-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.005zM7.378 14.406a2.503 2.503 0 100-5.006 2.503 2.503 0 000 5.006z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 11.902c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927a1.943 1.943 0 011.605 1.9c.012.748 1.17.748 1.16 0A3.138 3.138 0 008.38 8.988c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.575.678 1.124 1.994 1.674 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.753-1.147-.753-1.159-.006zM7.378 23.427a2.503 2.503 0 100-5.007 2.503 2.503 0 000 5.007z"
                                  fill="#212134"
                                />
                                <path
                                  d="M9.302 20.924c-.011.788-.486 1.513-1.228 1.797a1.954 1.954 0 01-2.185-.574 1.943 1.943 0 01-.173-2.196c.4-.684 1.199-1.066 1.981-.927.933.156 1.594.967 1.605 1.9.012.748 1.17.748 1.16 0A3.139 3.139 0 008.38 18.01c-1.176-.423-2.567-.03-3.36.933-.83 1.002-.968 2.45-.285 3.569.678 1.124 1.994 1.675 3.274 1.431 1.431-.272 2.428-1.593 2.451-3.019.012-.747-1.147-.747-1.159 0z"
                                  fill="#212134"
                                />
                              </svg>
                            </span>
                            <div
                              class="c1 c54"
                              overflow="hidden"
                            >
                              <div
                                class="c1 c33 c10"
                              >
                                <span
                                  class="c12 c55"
                                >
                                  city
                                </span>
                                <div
                                  class="c1 c11"
                                >
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="15"
                                      class="c14 c56 c57"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c58"
                                      >
                                        Edit city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 24 24"
                                        width="1em"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          clip-rule="evenodd"
                                          d="M23.604 3.514c.528.528.528 1.36 0 1.887l-2.622 2.607-4.99-4.99L18.6.396a1.322 1.322 0 011.887 0l3.118 3.118zM0 24v-4.99l14.2-14.2 4.99 4.99L4.99 24H0z"
                                          fill="#212134"
                                          fill-rule="evenodd"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                  <span>
                                    <button
                                      aria-disabled="false"
                                      aria-labelledby="16"
                                      class="c14 c56 c57"
                                      data-testid="delete-field"
                                      tabindex="0"
                                      type="button"
                                    >
                                      <span
                                        class="c58"
                                      >
                                        Delete city
                                      </span>
                                      <svg
                                        aria-hidden="true"
                                        fill="none"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 24 24"
                                        width="1em"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M3.236 6.149a.2.2 0 00-.197.233L6 24h12l2.96-17.618a.2.2 0 00-.196-.233H3.236zM21.8 1.983c.11 0 .2.09.2.2v1.584a.2.2 0 01-.2.2H2.2a.2.2 0 01-.2-.2V2.183c0-.11.09-.2.2-.2h5.511c.9 0 1.631-1.09 1.631-1.983h5.316c0 .894.73 1.983 1.631 1.983H21.8z"
                                          fill="#32324D"
                                        />
                                      </svg>
                                    </button>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <button
                      aria-controls="label"
                      aria-disabled="true"
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="c14 c60"
                      data-testid="add-field"
                      disabled=""
                      label="Insert another field"
                      type="button"
                    >
                      <div
                        aria-hidden="true"
                        class="c1 c16 c17"
                      >
                        <svg
                          fill="none"
                          height="1em"
                          viewBox="0 0 24 24"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M24 13.604a.3.3 0 01-.3.3h-9.795V23.7a.3.3 0 01-.3.3h-3.21a.3.3 0 01-.3-.3v-9.795H.3a.3.3 0 01-.3-.3v-3.21a.3.3 0 01.3-.3h9.795V.3a.3.3 0 01.3-.3h3.21a.3.3 0 01.3.3v9.795H23.7a.3.3 0 01.3.3v3.21z"
                            fill="#212134"
                          />
                        </svg>
                      </div>
                      <span
                        class="c12 c18"
                      >
                        Insert another field
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c58"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
